# ESP32C6-CAN-Expander

./: .gitignore  CMakeLists.txt  gimple_call_tracer.py  partitions.csv  sdkconfig  sdkconfig.old
components/ATTiny_UPDI/: ATTiny_UPDI.cpp  CMakeLists.txt
components/EFIGenie/: CMakeLists.txt
components/EmbeddedIOServices/: CMakeLists.txt
main/: ATTiny427ExpanderUpdateService.cpp  ATTiny427ExpanderUpdateService.h  ATTiny_UPDI.cpp  ATTiny_UPDI.h  AnalogService_ATTiny427Expander.h  AnalogService_Expander.cpp  AnalogService_Expander.h  CMakeLists.txt  DigitalService_ATTiny427Expander.cpp  DigitalService_Expander.cpp  DigitalService_Expander.h  Esp32IdfCommunicationService_WebSocket.cpp  PwmService_Expander.cpp  PwmService_Expander.h  UPDI.c  can_listen.cpp  can_listen.h  http_server.cpp  http_server.h  main.c  main.cpp  mount.c  mount.h  sock_can.cpp  sock_can.h  sock_uart.cpp  sock_uart.h  uart_listen.cpp  uart_listen.h
